@@ -130,7 +130,6 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.Stack;
-import java.util.stream.Collectors;
 
 import static io.ballerina.runtime.api.constants.RuntimeConstants.UNDERSCORE;
 import static org.ballerinalang.model.symbols.SymbolOrigin.SOURCE;
@@ -314,7 +313,7 @@ public class Types {
     public boolean isLaxFieldAccessAllowed(BType type) {
         type = Types.getImpliedType(type);
         Set<BType> visited = new HashSet<>();
-        return isLaxType(type, visited) == 1 || type.tag == TypeTags.XML || type.tag == TypeTags.XML_ELEMENT;
+        return isLaxType(type, visited) == 1 || isAssignable(type, symTable.xmlType);
     }
 
     // TODO : clean
@@ -1172,7 +1171,7 @@ public class Types {
                 BUnionType unionType = (BUnionType) constraintType;
                 Set<BType> memTypes = unionType.getMemberTypes();
                 List<BField> fields = memTypes.stream().map(type -> getTableConstraintField(type, fieldName))
-                        .filter(Objects::nonNull).collect(Collectors.toList());
+                        .filter(Objects::nonNull).toList();
 
                 if (fields.size() != memTypes.size()) {
                     return null;
@@ -2013,7 +2012,7 @@ public class Types {
         }
 
         BInvokableSymbol iteratorSymbol = (BInvokableSymbol) symResolver.lookupLangLibMethod(collectionType,
-                names.fromString(BLangCompilerConstants.ITERABLE_COLLECTION_ITERATOR_FUNC), env);
+                Names.fromString(BLangCompilerConstants.ITERABLE_COLLECTION_ITERATOR_FUNC), env);
         BObjectType objectType = (BObjectType) getImpliedType(iteratorSymbol.retType);
         BUnionType nextMethodReturnType =
                 (BUnionType) getResultTypeOfNextInvocation(objectType);
@@ -2036,7 +2035,7 @@ public class Types {
         }
         
         BInvokableSymbol iteratorSymbol = (BInvokableSymbol) symResolver.lookupLangLibMethod(collectionType,
-                names.fromString(BLangCompilerConstants.ITERABLE_COLLECTION_ITERATOR_FUNC), env);
+                Names.fromString(BLangCompilerConstants.ITERABLE_COLLECTION_ITERATOR_FUNC), env);
         BUnionType nextMethodReturnType =
                 (BUnionType) getResultTypeOfNextInvocation((BObjectType) getImpliedType(iteratorSymbol.retType));
         bLangInputClause.resultType = getRecordType(nextMethodReturnType);
@@ -2285,7 +2284,7 @@ public class Types {
 
         if (!recordType.sealed) {
             unionType.add(recordType.restFieldType);
-        } else if (fields.size() == 0) {
+        } else if (fields.isEmpty()) {
             unionType.add(symTable.neverType);
         }
 
@@ -3108,6 +3107,7 @@ public class Types {
             return hasSameMembers(sourceValueSpace, targetValueSpace);
         }
 
+        @Override
         public Boolean visit(BTypeReferenceType t, BType s) {
             s = getImpliedType(s);
             if (s.tag != TypeTags.TYPEREFDESC) {
@@ -3808,7 +3808,7 @@ public class Types {
                 return new BTableType(tableType.tag, target, tableType.tsymbol,
                         tableType.flags);
             } else if (tableType.constraint instanceof BMapType) {
-                return updateSelfReferencedWithNewType(source, (BMapType) tableType.constraint, target);
+                return updateSelfReferencedWithNewType(source, tableType.constraint, target);
             }
         }
         return s;
@@ -4230,7 +4230,7 @@ public class Types {
 
         // Create a new finite type representing the assignable values.
         BTypeSymbol finiteTypeSymbol = Symbols.createTypeSymbol(SymTag.FINITE_TYPE, finiteType.tsymbol.flags,
-                names.fromString("$anonType$" + UNDERSCORE + finiteTypeCount++),
+                Names.fromString("$anonType$" + UNDERSCORE + finiteTypeCount++),
                 finiteType.tsymbol.pkgID, null,
                 finiteType.tsymbol.owner, finiteType.tsymbol.pos,
                 VIRTUAL);
@@ -4552,18 +4552,16 @@ public class Types {
                 break;
             case TypeTags.FINITE:
                 BFiniteType expType = (BFiniteType) referredType;
-                expType.getValueSpace().forEach(value -> {
-                    memberTypes.add(value.getBType());
-                });
+                expType.getValueSpace().forEach(value -> memberTypes.add(value.getBType()));
                 break;
             case TypeTags.UNION:
                 BUnionType unionType = (BUnionType) referredType;
                 if (!visited.add(unionType)) {
                     return memberTypes;
                 }
-                unionType.getMemberTypes().forEach(member -> {
-                    memberTypes.addAll(expandAndGetMemberTypesRecursiveHelper(member, visited));
-                });
+                unionType.getMemberTypes().forEach(member ->
+                    memberTypes.addAll(expandAndGetMemberTypesRecursiveHelper(member, visited))
+                );
                 break;
             case TypeTags.ARRAY:
                 BType arrayElementType = ((BArrayType) referredType).getElementType();
@@ -4576,9 +4574,7 @@ public class Types {
 
                 if (getImpliedType(arrayElementType).tag == TypeTags.UNION) {
                     Set<BType> elementUnionTypes = expandAndGetMemberTypesRecursiveHelper(arrayElementType, visited);
-                    elementUnionTypes.forEach(elementUnionType -> {
-                        memberTypes.add(new BArrayType(elementUnionType));
-                    });
+                    elementUnionTypes.forEach(elementUnionType -> memberTypes.add(new BArrayType(elementUnionType)));
                 }
                 memberTypes.add(bType);
                 break;
@@ -4587,9 +4583,8 @@ public class Types {
                 if (getImpliedType(mapConstraintType).tag == TypeTags.UNION) {
                     Set<BType> constraintUnionTypes =
                             expandAndGetMemberTypesRecursiveHelper(mapConstraintType, visited);
-                    constraintUnionTypes.forEach(constraintUnionType -> {
-                        memberTypes.add(new BMapType(TypeTags.MAP, constraintUnionType, symTable.mapType.tsymbol));
-                    });
+                    constraintUnionTypes.forEach(constraintUnionType ->
+                        memberTypes.add(new BMapType(TypeTags.MAP, constraintUnionType, symTable.mapType.tsymbol)));
                 }
                 memberTypes.add(bType);
                 break;
@@ -5180,7 +5175,7 @@ public class Types {
                     .filter(t -> getImpliedType(t).tag != TypeTags.READONLY)
                     .map(t -> getIntersection(intersectionContext, t, env, finalType, visitedTypes))
                     .filter(Objects::nonNull)
-                    .collect(Collectors.toList());
+                    .toList();
             if (types.size() == 1) {
                 BType bType = types.get(0);
 
@@ -5663,7 +5658,7 @@ public class Types {
         BRecordTypeSymbol recordSymbol = Symbols.createRecordSymbol(Flags.asMask(flags), Names.EMPTY,
                                                                                 env.enclPkg.packageID, null,
                                                                                 env.scope.owner, null, VIRTUAL);
-        recordSymbol.name = names.fromString(
+        recordSymbol.name = Names.fromString(
                 anonymousModelHelper.getNextAnonymousTypeKey(env.enclPkg.packageID));
         BInvokableType bInvokableType = new BInvokableType(new ArrayList<>(), symTable.nilType, null);
         BInvokableSymbol initFuncSymbol = Symbols.createFunctionSymbol(
@@ -5690,8 +5685,8 @@ public class Types {
         BErrorType lhsErrorType = (BErrorType) lhsType;
         BErrorType rhsErrorType = (BErrorType) rhsType;
 
-        BErrorType errorType = createErrorType(detailType, lhsType.flags, env);
-        errorType.tsymbol.flags |= rhsType.flags;
+        long flags = lhsType.flags | rhsType.flags | Flags.PUBLIC;  // Anonymous (generated) types are marked as public.
+        BErrorType errorType = createErrorType(detailType, flags, env);
 
         errorType.typeIdSet = BTypeIdSet.getIntersection(lhsErrorType.typeIdSet, rhsErrorType.typeIdSet);
 
@@ -5700,7 +5695,7 @@ public class Types {
 
     public BErrorType createErrorType(BType detailType, long flags, SymbolEnv env) {
         String name = anonymousModelHelper.getNextAnonymousIntersectionErrorTypeName(env.enclPkg.packageID);
-        BErrorTypeSymbol errorTypeSymbol = Symbols.createErrorSymbol(flags | Flags.ANONYMOUS, names.fromString(name),
+        BErrorTypeSymbol errorTypeSymbol = Symbols.createErrorSymbol(flags | Flags.ANONYMOUS, Names.fromString(name),
                                                                      env.enclPkg.symbol.pkgID, null,
                                                                      env.scope.owner, symTable.builtinPos, VIRTUAL);
         errorTypeSymbol.scope = new Scope(errorTypeSymbol);
@@ -5895,7 +5890,7 @@ public class Types {
         }
 
         BTypeSymbol finiteTypeSymbol = Symbols.createTypeSymbol(SymTag.FINITE_TYPE, originalType.tsymbol.flags,
-                names.fromString("$anonType$" + UNDERSCORE + finiteTypeCount++),
+                Names.fromString("$anonType$" + UNDERSCORE + finiteTypeCount++),
                 originalType.tsymbol.pkgID, null,
                 originalType.tsymbol.owner, originalType.tsymbol.pos,
                 VIRTUAL);
@@ -5951,7 +5946,7 @@ public class Types {
             return errorLiftedType.getMemberTypes().toArray(new BType[0])[0];
         }
 
-        if (errorLiftedType.getMemberTypes().size() == 0) {
+        if (errorLiftedType.getMemberTypes().isEmpty()) {
             return symTable.semanticError;
         }
 
@@ -7036,7 +7031,7 @@ public class Types {
     }
 
     private enum ContextOption {
-        LEFT, RIGHT, NON;
+        LEFT, RIGHT, NON
     }
 
     private void populateBasicTypes(BType type, Set<BasicTypes> basicTypes) {
